<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarActivity"
    android:orientation="vertical"
    android:gravity="center">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/contact"
        android:layout_gravity="center" />

    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/nombreA"/>

        <EditText
            android:id="@+id/addname"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_nombre"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/emailA"/>

        <EditText
            android:id="@+id/addemail"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_e_mailA"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/numeroA" />

        <EditText
            android:id="@+id/addnum"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_numeroA"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnagregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AGREGAR"
        android:layout_gravity="center"
        android:layout_margin="9dp"
        android:onClick="agregar_contacto"/>

</LinearLayout>